// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Datawell label/data 1`] = `
<div
  data-css-12p1bh2=""
>
  <div
    data-css-1oooiac=""
    data-css-chiflz=""
    size="smallCaps"
  >
    Dog count
  </div>
  <div
    data-css-1hdp1kc=""
  >
    123
  </div>
  <div
    data-css-qnx2q6=""
  />
</div>
`;

exports[`Storyshots Datawell label/data/subLabel 1`] = `
<div
  data-css-12p1bh2=""
>
  <div
    data-css-1oooiac=""
    data-css-chiflz=""
    size="smallCaps"
  >
    Dog count
  </div>
  <div
    data-css-1hdp1kc=""
  >
    234,345
  </div>
  <div
    data-css-qnx2q6=""
  >
    All the doggies
  </div>
</div>
`;

exports[`Storyshots Datawell row 1`] = `
<div
  style={
    Object {
      "display": "flex",
    }
  }
>
  <div
    data-css-12p1bh2=""
  >
    <div
      data-css-1oooiac=""
      data-css-chiflz=""
      size="smallCaps"
    >
      Dog count
    </div>
    <div
      data-css-1hdp1kc=""
    >
      234,345
    </div>
    <div
      data-css-qnx2q6=""
    >
      All the doggies
    </div>
  </div>
  <div
    data-css-12p1bh2=""
  >
    <div
      data-css-1oooiac=""
      data-css-chiflz=""
      size="smallCaps"
    >
      Cat count
    </div>
    <div
      data-css-1hdp1kc=""
    >
      123
    </div>
    <div
      data-css-qnx2q6=""
    />
  </div>
  <div
    data-css-12p1bh2=""
  >
    <div
      data-css-1oooiac=""
      data-css-chiflz=""
      size="smallCaps"
    >
      Rafters on the River
    </div>
    <div
      data-css-1hdp1kc=""
    >
      12/23
    </div>
    <div
      data-css-qnx2q6=""
    />
  </div>
  <div
    data-css-12p1bh2=""
  >
    <div
      data-css-1oooiac=""
      data-css-chiflz=""
      size="smallCaps"
    >
      Flotsam
    </div>
    <div
      data-css-1hdp1kc=""
    >
      About 3
    </div>
    <div
      data-css-qnx2q6=""
    >
      The icky stuff that is not cats or dogs, floating in the river
    </div>
  </div>
</div>
`;
